--- a/source/index.html
+++ b/source/index.html
@@ -9,10 +9,10 @@ layout: default
 {% endfor %}
 <nav id="pagenavi">
     {% if paginator.previous_page %}
-        <a href="{{paginator.previous_page}}" class="prev">Prev</a>
+        <a href="{{paginator.previous_page}}" class="prev">Antaŭa</a>
     {% endif %}
     {% if paginator.next_page %}
-        <a href="{{paginator.next_page}}" class="next">Next</a>
+        <a href="{{paginator.next_page}}" class="next">Sekva</a>
     {% endif %}
-    <div class="center"><a href="{{ root_url }}/blog/archives">Blog Archives</a></div>
+    <div class="center"><a href="{{ root_url }}/blogo/arhivoj">Bloga Arĥivoj</a></div>
 </nav>
