--- a/source/index.html
+++ b/source/index.html
@@ -14,5 +14,5 @@ layout: default
     {% if paginator.next_page %}
         <a href="{{paginator.next_page}}" class="next">Sekva</a>
     {% endif %}
-    <div class="center"><a href="{{ root_url }}/blogo/arhivoj">Bloga Arĥivoj</a></div>
+    <div class="center"><a href="{{ root_url }}/blogo/arhivoj">Blogaj Arĥivoj</a></div>
 </nav>
